# cURLinator

./: .dockerignore  .env.docker.example  .env.example  .gitignore  API_SETUP.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test-local-api.sh  test-railway-deployment.sh  test_api.sh
.github/workflows/: ci.yml  test.yml
alembic/: env.py
alembic/versions/: 03a55a83680e_add_embedding_provider_and_model_fields_.py  1094e6e8dab4_add_performance_indexes.py  53dc765afd92_initial_schema.py  61a08c281a85_add_system_prompt_customization.py  97fc2b4ef6f7_add_user_settings_table.py  ac85656aacd1_add_user_role_field.py  ada6cce15156_add_collection_sharing_and_visibility.py  add_crawl_jobs_table.py
examples/: README.md  my_test.py  test_documentation_agent.py  test_end_to_end_workflow.py
scripts/: create_admin.py  lint.sh  setup.sh  test.sh
src/curlinator/: __init__.py
src/curlinator/agents/: __init__.py  base.py  chat_agent.py  documentation_agent.py
src/curlinator/api/: __init__.py  auth.py  database.py  error_codes.py  main.py  metrics.py  middleware.py
src/curlinator/api/db/: models.py  (+1 more)
src/curlinator/config/: __init__.py  settings.py
src/curlinator/core/: __init__.py  openapi_validator.py
src/curlinator/models/: __init__.py  api_spec.py  documentation.py  embeddings.py
src/curlinator/prompts/: __init__.py  documentation_agent_prompts.py
src/curlinator/services/: __init__.py  http_client.py
src/curlinator/utils/: __init__.py  contextual_enrichment.py  embeddings.py  llm_validation.py  openapi_detector.py  page_classifier.py  url_helpers.py
tests/: __init__.py  test_config.py  test_models.py
tests/agents/: __init__.py  test_documentation_agent.py
tests/integration/: README.md  conftest.py  test_admin_prompts.py  test_api_endpoints.py  test_chat_agent_integration.py  test_collection_sharing.py  test_documentation_agent_integration.py  test_end_to_end_workflow.py  test_freemium_flow.py  test_metrics.py  test_session_management.py  test_user_management.py  test_user_settings.py
tests/unit/: test_contextual_enrichment.py  test_embeddings.py  test_http_client.py  test_openapi_detector.py  test_openapi_validator.py  test_page_classifier.py  test_prompt_resolution.py  test_url_helpers.py  test_validators.py
(+24 files in other folders)
