[project]
name = "curlinator"
version = "0.1.0"
description = "AI-powered API documentation crawler and query engine (core library)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LlamaIndex core and integrations
    "llama-index>=0.11.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-embeddings-huggingface>=0.6.0",
    "llama-index-embeddings-gemini>=0.2.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-llms-anthropic>=0.3.0",
    "llama-index-llms-gemini>=0.2.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-readers-web>=0.2.0",
    "llama-index-retrievers-bm25>=0.3.0",
    
    # Vector database
    "chromadb>=0.4.0",
    
    # Web scraping and crawling
    "playwright>=1.48.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "selenium>=4.0.0",
    "chromedriver-autoinstaller>=0.6.0",
    "webdriver-manager>=4.0.0",
    
    # Data validation and settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # LLM providers
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
    
    # Utilities
    "tiktoken>=0.8.0",
    "tenacity>=9.0.0",
    "bm25s>=0.1.0",
    "PyStemmer>=2.2.0",
    "huggingface-hub>=0.34.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

